@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-28T01:27:03Z",
+  "timestamp" : "2022-07-28T08:21:55Z",
   "count_outdated" : 383,
   "uniques_outdated" : 240,
   "count" : 411,
-  "uniques" : 256,
+  "uniques" : 257,
   "clones" : [
     {
       "timestamp": "2022-07-14T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -79,6 +79,13 @@
       "timestamp": "2022-07-27T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
