@@ -1,3 +1,10 @@
+2022-07-28T08:21:55Z:
+* notice: last 14d: unq all: 6 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 240 383 / 256 411
+* notice: next accum: outdated-unq outdated-all / unq all: 240 383 / 257 411
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-14 2022-07-28]
+
 2022-07-28T01:27:03Z:
 * notice: last 14d: unq all: 6 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 240 383 / 256 410
